<resources>
    <string name="waves_of_fo">
Waves Of Food
</string>
    <string name="deliever_fa">
Deliever Favorite Food
</string>
    <string name="design_by_n">
Design By\nMuskan
</string>
    <string name="enjoy_resta">
Enjoy Restaurant Quality Meals \nat Home
</string>
    <string name="app_name">Waves of Food</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="to_provide_">
To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience."
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>