<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/waves_of_fo"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="top"
        android:lineHeight="50dp"
        android:text="@string/waves_of_fo"
        android:textAppearance="@style/waves_of_fo"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/deliever_fa"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:lineHeight="17sp"
        android:text="@string/deliever_fa"
        android:textAppearance="@style/deliever_fa"
        app:layout_constraintEnd_toEndOf="@+id/waves_of_fo"
        app:layout_constraintStart_toStartOf="@+id/waves_of_fo"
        app:layout_constraintTop_toBottomOf="@+id/waves_of_fo" />

    <TextView
        android:id="@+id/design_by_n"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:text="@string/design_by_n"
        android:textAlignment="center"
        android:textAppearance="@style/design_by_n"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>